tests/purs/failing/IntAsRecordLabel.purs
-- @shouldFailWith ErrorParsingModule
module Main where

type IntAsRecordLabel = { 42 :: Int }
